fixed clipping issue

--- a/public_html/assets/css/meyawo.css
+++ b/public_html/assets/css/meyawo.css
@@ -12210,7 +12210,7 @@ pre .code {
 
 /* sections */
 .section {
-  padding: 70px 10px;
+  padding: 25vh 10px;
 }
 
 .section .section-title {
